[package]
name = "scilla-parser"
version = "1.0.0"
edition = "2021"
description = "Scilla smart contract parser written in Rust"
license = "MIT"
authors = ["Saeed Dadkhah <saeed@zilliqa.com>", "Troels Rønnow <troels@zilliqa.com"]
repository = "https://github.com/Zilliqa/rs-scilla-parser/"
documentation = "https://docs.rs/scilla-parser"

[dependencies]
lalrpop-util = "0.20.0"
regex = "1.10.2"
thiserror = "1.0.50"

[dev-dependencies]
pretty_assertions = "1.4.0"

[build-dependencies]
lalrpop = "0.20.0"
